--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,13 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+/* @plugin "daisyui" {
+  themes: light --default, dark --prefersdark, cupcake;
+} */
 @plugin "daisyui";
+
+@plugin "daisyui/theme" {
+  name: "light";
+  default: true;
+  --color-primary: oklch(70.5% 0.213 47.604);
+  --color-secondary: teal;
+  --color-accent:#E74C3C;
+}
